--- a/index1.html
+++ b/index1.html
@@ -41,7 +41,7 @@
 <br>此後隨著西藏的政治中心移至薩迦，布達拉宮也一直處於破敗之中。</h3>
 </div>
 <div class="box1-1">松贊干布與文成公主的金像
-<div><img src="圖片檔/aef721c3e9ae41acbeb1c0961200a8d0.jpeg" width="500" height="355" alt=""/></div></div>
+<div><img src="ppp/aef721c3e9ae41acbeb1c0961200a8d0.jpeg" width="400" height="285" alt=""/></div></div>
 </div>
 </article>
 
@@ -65,15 +65,15 @@
 <h2>白宮</h2>
 <h4>主要為行政區，可以看到古代的宮殿，喇嘛住的地方</h4>
 <br>
-<img src="圖片檔/截圖 2023-05-24 上午12.00.45.png" width="358" height="281" alt=""/>
-<img src="圖片檔/20200627065834844.jpeg" alt="" width="318" height="281"/>
-	<img src="圖片檔/截圖 2023-05-23 下午9.35.32.png" width="396" height="281" alt=""/>
+<img src="ppp/006.png" width="384" height="298" alt=""/>
+<img src="ppp/20200627065834844.jpeg" alt="" width="300" height="298"/>
+	<img src="ppp/截圖 2023-05-23 下午9.19.05.png" width="400" height="298" alt=""/>
 	
 <h2>紅宮</h2>
 <h4>主要為達賴喇嘛的靈塔，還有很多神尊，價值連成的法器</h4>
-<img src="圖片檔/截圖 2023-05-23 下午9.19.38.png" width="422" height="281" alt=""/>
-	<img src="圖片檔/截圖 2023-05-23 下午9.36.33.png" width="247" height="281" alt=""/>
-	<img src="圖片檔/截圖 2023-05-23 下午9.37.40.png" width="243" height="281" alt=""/>    </div>
+<img src="ppp/截圖 2023-05-23 下午9.19.38.png" width="420" height="281" alt=""/>
+	<img src="ppp/截圖 2023-05-23 下午9.36.33.png" width="247" height="281" alt=""/>
+	<img src="ppp/截圖 2023-05-23 下午9.37.40.png" width="243" height="281" alt=""/>    </div>
 </article>
 
 <article>
